[project]
name = "youtube-rag-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.46.0",
    "google-generativeai>=0.8.5",
    "gtts>=2.5.4",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.0.10",
    "langchainhub>=0.1.21",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "rapidocr-onnxruntime>=1.4.4",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "youtube-transcript-api==1.2.2",
]
